Day 5 change to OOP